ros2_wshesh/log/build_2025-09-10_16-30-24/turtle_pkg/stderr.log
  File "/ros2_wshesh/install/turtle_pkg/lib/python3.12/site-packages/turtle_pkg/TurtleController.py", line 30
    if msg.data in ['w,'a','s','d']:
                                 ^
SyntaxError: unterminated string literal (detected at line 30)

